--- a/workshop.html
+++ b/workshop.html
@@ -31,6 +31,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
-  <a href="/keminformatiikka/index.html" class="btn btn-outline-dark btn-bottom-right">Takaisin etusivulle</a>
+  <a href="/keminformatiikka/" class="btn btn-outline-dark btn-bottom-right">Takaisin etusivulle</a>
 
 </html>
